--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -43,7 +43,6 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
 
     script(src="js/exit.js")
     script(src="js/all.js")
-    script(src="https://connect.facebook.net/en_US/all.js#xfbml=1" async defer)
     script(type="application/ld+json")
       | {
       |   "@context": "http://schema.org",
@@ -92,25 +91,6 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
            "name": "#{data.venue_name}"
          }
        }      
-    script
-      | (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      | (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      | m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      | })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      | ga('create', 'UA-66135177-1', 'auto');
-      | ga('send', 'pageview');
-
-    script
-      | !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      | n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-      | n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-      | t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-      | document,'script','https://connect.facebook.net/en_US/fbevents.js');
-
-      | fbq('init', '1655374961370442');
-      | fbq('track', "PageView");
-
     link(rel="icon" type="image/png" href="https://devternity.com/images/logo_2017_filled.png")
     link(rel="stylesheet" href="css/remodal.css")
          
@@ -162,7 +142,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
         video#video(autoplay loop playsinline muted)
           source(src="images/video.mp4" type="video/mp4")
 
-        a#trust(href="https://itconference.top")
+        a#trust(href="https://itconference.top" rel="noopener")
           img(src="images/trustpilot.png" alt="5 stars event")
 
         .info
@@ -199,7 +179,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
             h2
             p 
               | DevTernity is 
-              a(href="//itconference.top" target="_blank" alt="IT Conference top"): strong the top 3
+              a(href="//itconference.top" target="_blank" alt="IT Conference top" rel="noopener"): strong the top 3
               |  international software development conference in Europe. 
             h2
             p We focus on the core skills paramount to your success – code design, software architecture and leadership.
@@ -217,14 +197,6 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
               i.fas.fa-star
               |&nbsp;
               i.fas.fa-star
-          //- br
-          //- br
-        //- .fb-like(data-width="320px" data-href="https://www.facebook.com/devternity" data-layout="standard" data-action="like" data-show-faces="true" style="min-height: 100px")
-      //- section.wrapper.align-center(data-remodal-id="venue-location")
-      //-     button.remodal-close(data-remodal-action="close")
-      //-     div.embed-container
-      //-       iframe(src='https://player.vimeo.com/video/265964598' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen)
-
       section#speakers-container.wrapper.speakers.align-center
         div.container
           header
@@ -455,10 +427,10 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
               | DevTernity is organised with love 
               i.fa.fa-heart(style="color: red" aria-hidden="true")
               |  and care by 
-              strong: a(target="_blank" href="https://medium.com/@eduardsi/my-team-58f99b215be8" alt="Our team") passionate software developers.
+              strong: a(target="_blank" href="https://medium.com/@eduardsi/my-team-58f99b215be8" alt="Our team" rel="noopener") passionate software developers.
             h3 Location / Venue
             p 
-              a(href="https://www.google.lv/maps/place/DevTernity+Conference/@56.9397819,24.0966023,17z/data=!3m1!4b1!4m5!3m4!1s0x46eec53ffbf34663:0xa268eab43af282d4!8m2!3d56.939779!4d24.098791" target="_blank" aria-label="Venue location on Google maps")
+              a(href="https://www.google.lv/maps/place/DevTernity+Conference/@56.9397819,24.0966023,17z/data=!3m1!4b1!4m5!3m4!1s0x46eec53ffbf34663:0xa268eab43af282d4!8m2!3d56.939779!4d24.098791" target="_blank" aria-label="Venue location on Google maps" rel="noopener")
                 i.fas.fa-map-marker-alt(aria-hidden)
               |  #{data.venue_name}, #{data.venue_address} 
           section(class="6u 12u$(small)")
