--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -331,7 +331,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
                       |  FEW TICKETS LEFT 
                     | &nbsp;
                   each tag, index in speaker.tags
-                    span.tag ##{tag}
+                    span.tag #{tag}
                     if index != speaker.tags.length - 1 
                       | 
             .row
