--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -64,14 +64,15 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
          "@type": "EducationEvent",
          "name": "#{data.theme} Conference",
          "image": "http://devternity.com/images/logo_2017_filled.png",
-         "description": "The premium-quality annual international software development conference in #{data.city}, #{data.country}",
+         "description": "The best software development conference in Europe, #{data.city}, #{data.country}",
          "startDate": "#{data.date_iso}T09:00",
          "endDate": "#{data.date_iso}T20:00",
          "offers": {
           "@type": "Offer",
           "availability": "http://schema.org/InStock",
-          "offerCount": "600",
           "price": "299",
+          "validFrom": "2018-01-01T01:01:01.001Z",
+          "url": "https://devternity.com/",
           "priceCurrency": "EUR"
          },
          "performer": {
