attempt to fix video playback in mobile chrome

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -478,3 +478,5 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
             elements_selector: 'img.lazy',
             treshold: 500
         });
+    script.
+        document.getElementById("video").load();
