--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -479,4 +479,4 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
             treshold: 500
         });
     script.
-        document.getElementById("video").load();
+        document.getElementById("video").play();
