--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -290,7 +290,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
             h2 
             if data.workshops.length
               p
-                em Our instructors are here to deliver full-day workshops. Learn directly from industry experts:
+                em Our instructors are here to deliver full-day workshops from 9:00 to 18:00. Learn directly from industry experts:
             else
               p Coming soon...
 
