--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -171,7 +171,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
                     a(href=link aria-label=`Link to ${social}`)
                       i(class=`fab fa-${social}` aria-hidden)
                     | &nbsp;&nbsp;&nbsp;
-                a(ng-click="slideTo('#footer')" style="cursor: pointer" alt="Slide to footer") Subscribe
+                a(ng-click="slideTo('#footer')" style="cursor: pointer" alt="Slide to footer") Join waitlist
 
       section.wrapper.style1.align-center
         div.container.intro
