add devternity 2020 dates

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -166,7 +166,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
                 a.button.big We are sold out.
                 br
                 br
-                span DevTernity 2020 is on the 3-4 of December. Save the date!
+                span DevTernity 2020 is on the 3-4 of December. 
                 br
                 br
                 each link, social in data.socials
